# verifier-contract

./: Cargo.toml
src/: lib.rs
src/verified_contract/: comment.rs  mod.rs  vote.rs
