[package]
name = "verifier-contract"
description = "SourceScan verifier contract"
version = "0.1.0"
edition = "2021"
# TODO: Fill out the repository field to help NEAR ecosystem tools to discover your project.
# NEP-0330 is automatically implemented for all contracts built with near-sdk-rs.
# Link to the repository will be available via `contract_source_metadata` view-function.
repository = "https://github.com/adrianpryce/verifier-contract"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:0.7.0-rust-1.80.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:60b6c83c305f689117675502ef6d2a82cabb32e2428ab80925bcdb526260dd9c"
# build command inside of docker container 
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = ["cargo", "near", "build"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = "5.2.1"
near-contract-standards = "5.2.1"
serde_json = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
near-sdk = { version = "5.1.0", features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"], default-features = false  }
tokio = { version = "1.10.0", features = ["full"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
